syntax = "proto3";

package payment;

service PaymentService {
  rpc CreatePayment (CreatePaymentRequest) returns (CreatePaymentResponse);
}

message CreatePaymentRequest {
  string user_id = 1;
  double total_amount = 2;
  string instructor_id = 3;
  double platform_fee = 4;
  string instructor_revenue = 5;
  string currency = 6;
  string type = 7;
  string reference_id = 8;
  string success_url = 9;
  string cancel_url = 10;
  Item item = 11;
}

message Item {
  string title = 1;
  double amount = 4;
}

message CreatePaymentResponse {
  string transaction_id = 1;
}
