syntax = "proto3";

package session;

service SessionService {
    rpc GetSession(GetSessionRequest) returns (Session);
    rpc BookSession(BookSessionRequest) returns (BookSessionResponse);

}
message BookSessionRequest {
    string slotId = 1;
    string userId = 2;
}
message BookSessionResponse {
    string id = 1;
}

message GetSessionRequest {
   string id = 1;
}

message Session {
    string id = 1;
    string instructorId = 2;
    string learnerId = 3;
    string availabilitySlotId = 4;
    string startTime = 5;
    string endTime = 6;
    string status = 7;
    string paymentId = 8;
    string currency = 9;
    double price = 10;
    string pendingPaymentExpiryTime = 11;
    string createdAt = 12;
    string updatedAt = 13;
}


